[package]
name = "rhoxy"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "A simple HTTP/HTTPS proxy in Rust."

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
http = "1.3.1"
anyhow = "1.0.99"
threadpool = "1.8"
num_cpus = "1.16"
log = "0.4"
env_logger = "0.10"