[package]
name = "rhoxy"
version = "0.2.6"
edition = "2021"
license = "MIT"
description = "An async HTTP/HTTPS proxy in Rust."

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12" }
http = "1.3.1"
anyhow = "1.0.99"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# Internal feature for integration tests: allows bypassing SSRF checks
# so tests can use localhost upstreams. Never enable in production.
_test-support = []
